Add github button

--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -143,8 +143,12 @@
       <br>
       <a href="https://github.com/bioimage-io/bioimageio-chatbot/blob/main/docs/DISCLAIMER.md" target="_blank">Disclaimer for BioImage.IO Chatbot</a> 
       <br>
+      <a href="https://github.com/bioimage-io/bioimageio-chatbot/" target="_blank" style="text-decoration: none; color: inherit;">
+        <span class="badge bg-secondary"><i class="fab fa-github" style="font-size: 12px;"></i>Github</span>
+      </a>  
       <span class="badge bg-secondary">bioimageio-chatbot v0.1.0</span>
       <br>
+          
       <a href="https://badge.fury.io/py/bioimageio-chatbot" target="_blank"><img src="https://badge.fury.io/py/bioimageio-chatbot.svg" alt="PyPI version" height="18"></a>
     </div>
   </div>
