change form label color

--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -12,6 +12,9 @@
   <link rel="icon" type="image/x-icon" href="https://bioimage.io/static/icons/favicon.ico">
   <style>
     /* Custom CSS */
+    .form-label {
+      color: #808080b0;
+    }
     .markdown-body {
       max-width: calc(100% - 40px);
     }
