--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -123,7 +123,7 @@
       color: #000;
       text-align: center;
       padding: 15px;
-      margin-top: 20px; /* Adjust margin as needed */
+      margin-top: 0px; /* Adjust margin as needed */
       border: 2px solid #007bff; /* Prominent border color */
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow for prominence */
@@ -195,6 +195,8 @@
       <button class="feedback-button unlike-button small-grey-button">
         <i class="fas fa-thumbs-down"></i> 
       </button> for each response, or by clicking the 'Feedback' button below.</p>
+
+      <button class="feedback-button" onclick="$('.announcement-banner').hide()">OK, got it!</button>
     </div>
   </div>
 
