fix token value

--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -308,8 +308,10 @@
   <script>
     $(document).ready(async function () {
       let svc;
+      let token = null;
       const spinner = `<div class="spinner"></div>`; // Spinner HTML
       const shortIntroMessage = "Hi there! I'm Melman, your community knowledge base assistant for bioimage analysis. How can I assist you today?";
+
       // Function to show the login screen
       function showLoginScreen() {
         $('#login-container').show();
