--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -195,6 +195,8 @@
         <i class="fas fa-thumbs-down"></i> 
       </button> for each response, or by clicking the 'Feedback' button below.</p>
 
+      <p>Note that the chatbot is still in beta and is being actively developed. See <a href="https://github.com/bioimage-io/bioimageio-chatbot/blob/main/docs/DISCLAIMER.md" target="_blank">the Disclaimer</a> for more details.</p>
+
       <button class="feedback-button" onclick="$('.announcement-banner').hide()">OK, got it!</button>
     </div>
   </div>
